cmake_minimum_required(VERSION 3.20)
project(revisepdf CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Crow CONFIG REQUIRED)
find_package(asio CONFIG REQUIRED)
add_executable(revisepdf src/main.cpp src/engine.cpp)
target_include_directories(revisepdf PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_link_libraries(revisepdf PRIVATE Crow::Crow asio::asio)